crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__role-Uncertain.snap
---
source: rust/crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "eng"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Uncertain",
            "speaker_code": "CHI"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Uncertain",
        "sex": "female",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Test role Uncertain",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "line_type": "utterance",
      "main": {
        "content": {
          "content": [
            {
              "content": [
                {
                  "content": "foo",
                  "type": "text"
                }
              ],
              "raw_text": "foo",
              "span": {
                "end": 150,
                "start": 147
              },
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "CHI"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "1;08.",
        "corpus": "bates",
        "group": "normal",
        "language": "eng",
        "role": "Uncertain",
        "sex": "female",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Uncertain"
    }
  }
}
