crates/core/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__russian-child-narrative.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "languages": [
    "rus"
  ],
  "lines": [
    {
      "header": {
        "type": "utf8"
      },
      "line_type": "header"
    },
    {
      "header": {
        "type": "begin"
      },
      "line_type": "header"
    },
    {
      "header": {
        "codes": [
          "rus"
        ],
        "type": "languages"
      },
      "line_type": "header"
    },
    {
      "header": {
        "entries": [
          {
            "name": null,
            "role": "Investigator",
            "speaker_code": "EX1"
          },
          {
            "name": null,
            "role": "Target_Child",
            "speaker_code": "CHI"
          }
        ],
        "type": "participants"
      },
      "line_type": "header"
    },
    {
      "header": {
        "corpus": "ZAS",
        "language": [
          "rus"
        ],
        "role": "Investigator",
        "speaker": "EX1",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "age": "4;07.03",
        "corpus": "ZAS",
        "language": [
          "rus"
        ],
        "role": "Target_Child",
        "sex": "male",
        "speaker": "CHI",
        "type": "id"
      },
      "line_type": "header"
    },
    {
      "header": {
        "filename": "russian-child-narrative",
        "media_type": "audio",
        "type": "media"
      },
      "line_type": "header"
    },
    {
      "header": {
        "date": "08-APR-2008",
        "type": "date"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Russian child narrative with audio, %mor, %gra, %wor tiers",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "header": {
        "content": {
          "segments": [
            {
              "text": "Constructs: audio-linked Cyrillic file with word-level timing",
              "type": "text"
            }
          ]
        },
        "type": "comment"
      },
      "line_type": "header"
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "lemma": "вот",
                  "pos": "part"
                }
              },
              {
                "main": {
                  "features": [
                    "Fem",
                    "Nom"
                  ],
                  "lemma": "история",
                  "pos": "noun"
                }
              },
              {
                "main": {
                  "lemma": "здесь",
                  "pos": "adv"
                }
              },
              {
                "main": {
                  "features": [
                    "Fin",
                    "Imp",
                    "Ind",
                    "Pres",
                    "S3"
                  ],
                  "lemma": "начинаться",
                  "pos": "verb"
                }
              }
            ],
            "terminator": {
              "type": "period"
            },
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 2,
                "index": 1,
                "relation": "ADVMOD"
              },
              {
                "head": 4,
                "index": 2,
                "relation": "NSUBJ"
              },
              {
                "head": 4,
                "index": 3,
                "relation": "ADVMOD"
              },
              {
                "head": 0,
                "index": 4,
                "relation": "ROOT"
              },
              {
                "head": 4,
                "index": 5,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        },
        {
          "data": {
            "bullet": null,
            "items": [
              {
                "cleaned_text": "вот",
                "content": [
                  {
                    "content": "вот",
                    "type": "text"
                  }
                ],
                "kind": "word",
                "raw_text": "вот"
              },
              {
                "cleaned_text": "история",
                "content": [
                  {
                    "content": "история",
                    "type": "text"
                  }
                ],
                "inline_bullet": {
                  "end_ms": 580,
                  "start_ms": 460
                },
                "kind": "word",
                "raw_text": "история"
              },
              {
                "cleaned_text": "здесь",
                "content": [
                  {
                    "content": "здесь",
                    "type": "text"
                  }
                ],
                "inline_bullet": {
                  "end_ms": 660,
                  "start_ms": 580
                },
                "kind": "word",
                "raw_text": "здесь"
              },
              {
                "cleaned_text": "начинается",
                "content": [
                  {
                    "content": "начинается",
                    "type": "text"
                  }
                ],
                "inline_bullet": {
                  "end_ms": 2868,
                  "start_ms": 660
                },
                "kind": "word",
                "raw_text": "начинается"
              }
            ],
            "language_code": null,
            "terminator": {
              "type": "period"
            }
          },
          "type": "Wor"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "bullet": {
            "end_ms": 2868,
            "start_ms": 460
          },
          "content": [
            {
              "cleaned_text": "вот",
              "content": [
                {
                  "content": "вот",
                  "type": "text"
                }
              ],
              "raw_text": "вот",
              "type": "word"
            },
            {
              "cleaned_text": "история",
              "content": [
                {
                  "content": "история",
                  "type": "text"
                }
              ],
              "raw_text": "история",
              "type": "word"
            },
            {
              "cleaned_text": "здесь",
              "content": [
                {
                  "content": "здесь",
                  "type": "text"
                }
              ],
              "raw_text": "здесь",
              "type": "word"
            },
            {
              "cleaned_text": "начинается",
              "content": [
                {
                  "content": "начинается",
                  "type": "text"
                }
              ],
              "raw_text": "начинается",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "period"
          }
        },
        "speaker": "EX1"
      }
    },
    {
      "dependent_tiers": [
        {
          "data": {
            "items": [
              {
                "main": {
                  "features": [
                    "Int,Rel",
                    "Acc",
                    "S1"
                  ],
                  "lemma": "что",
                  "pos": "pron"
                }
              },
              {
                "main": {
                  "lemma": "можно",
                  "pos": "adv"
                }
              },
              {
                "main": {
                  "features": [
                    "Inf",
                    "Perf",
                    "S"
                  ],
                  "lemma": "сказать",
                  "pos": "verb"
                }
              },
              {
                "main": {
                  "lemma": "про",
                  "pos": "adp"
                }
              },
              {
                "main": {
                  "features": [
                    "Fem",
                    "Def",
                    "Dem",
                    "Sing"
                  ],
                  "lemma": "этот",
                  "pos": "det"
                }
              },
              {
                "main": {
                  "features": [
                    "Fem",
                    "Acc"
                  ],
                  "lemma": "картинка",
                  "pos": "noun"
                }
              }
            ],
            "terminator": {
              "type": "question"
            },
            "tier_type": "Mor"
          },
          "type": "Mor"
        },
        {
          "data": {
            "relations": [
              {
                "head": 3,
                "index": 1,
                "relation": "OBJ"
              },
              {
                "head": 0,
                "index": 2,
                "relation": "ROOT"
              },
              {
                "head": 2,
                "index": 3,
                "relation": "CSUBJ"
              },
              {
                "head": 6,
                "index": 4,
                "relation": "CASE"
              },
              {
                "head": 6,
                "index": 5,
                "relation": "DET"
              },
              {
                "head": 3,
                "index": 6,
                "relation": "OBL"
              },
              {
                "head": 2,
                "index": 7,
                "relation": "PUNCT"
              }
            ],
            "tier_type": "Gra"
          },
          "type": "Gra"
        },
        {
          "data": {
            "bullet": null,
            "items": [
              {
                "cleaned_text": "что",
                "content": [
                  {
                    "content": "что",
                    "type": "text"
                  }
                ],
                "inline_bullet": {
                  "end_ms": 3280,
                  "start_ms": 2990
                },
                "kind": "word",
                "raw_text": "что"
              },
              {
                "cleaned_text": "можно",
                "content": [
                  {
                    "content": "можно",
                    "type": "text"
                  }
                ],
                "inline_bullet": {
                  "end_ms": 3500,
                  "start_ms": 3280
                },
                "kind": "word",
                "raw_text": "можно"
              },
              {
                "cleaned_text": "сказать",
                "content": [
                  {
                    "content": "сказать",
                    "type": "text"
                  }
                ],
                "inline_bullet": {
                  "end_ms": 3940,
                  "start_ms": 3500
                },
                "kind": "word",
                "raw_text": "сказать"
              },
              {
                "cleaned_text": "про",
                "content": [
                  {
                    "content": "про",
                    "type": "text"
                  }
                ],
                "inline_bullet": {
                  "end_ms": 4180,
                  "start_ms": 3940
                },
                "kind": "word",
                "raw_text": "про"
              },
              {
                "cleaned_text": "эту",
                "content": [
                  {
                    "content": "эту",
                    "type": "text"
                  }
                ],
                "inline_bullet": {
                  "end_ms": 4340,
                  "start_ms": 4180
                },
                "kind": "word",
                "raw_text": "эту"
              },
              {
                "cleaned_text": "картинку",
                "content": [
                  {
                    "content": "картинку",
                    "type": "text"
                  }
                ],
                "inline_bullet": {
                  "end_ms": 5238,
                  "start_ms": 4340
                },
                "kind": "word",
                "raw_text": "картинку"
              }
            ],
            "language_code": null,
            "terminator": {
              "type": "question"
            }
          },
          "type": "Wor"
        }
      ],
      "line_type": "utterance",
      "main": {
        "content": {
          "bullet": {
            "end_ms": 5238,
            "start_ms": 2990
          },
          "content": [
            {
              "cleaned_text": "что",
              "content": [
                {
                  "content": "что",
                  "type": "text"
                }
              ],
              "raw_text": "что",
              "type": "word"
            },
            {
              "cleaned_text": "можно",
              "content": [
                {
                  "content": "можно",
                  "type": "text"
                }
              ],
              "raw_text": "можно",
              "type": "word"
            },
            {
              "cleaned_text": "сказать",
              "content": [
                {
                  "content": "сказать",
                  "type": "text"
                }
              ],
              "raw_text": "сказать",
              "type": "word"
            },
            {
              "cleaned_text": "про",
              "content": [
                {
                  "content": "про",
                  "type": "text"
                }
              ],
              "raw_text": "про",
              "type": "word"
            },
            {
              "cleaned_text": "эту",
              "content": [
                {
                  "content": "эту",
                  "type": "text"
                }
              ],
              "raw_text": "эту",
              "type": "word"
            },
            {
              "cleaned_text": "картинку",
              "content": [
                {
                  "content": "картинку",
                  "type": "text"
                }
              ],
              "raw_text": "картинку",
              "type": "word"
            }
          ],
          "terminator": {
            "type": "question"
          }
        },
        "speaker": "EX1"
      }
    },
    {
      "header": {
        "type": "end"
      },
      "line_type": "header"
    }
  ],
  "media": {
    "filename": "russian-child-narrative",
    "media_type": "audio"
  },
  "options": [],
  "participants": {
    "CHI": {
      "birth_date": null,
      "code": "CHI",
      "id": {
        "age": "4;07.03",
        "corpus": "ZAS",
        "language": [
          "rus"
        ],
        "role": "Target_Child",
        "sex": "male",
        "speaker": "CHI"
      },
      "name": null,
      "role": "Target_Child"
    },
    "EX1": {
      "birth_date": null,
      "code": "EX1",
      "id": {
        "corpus": "ZAS",
        "language": [
          "rus"
        ],
        "role": "Investigator",
        "speaker": "EX1"
      },
      "name": null,
      "role": "Investigator"
    }
  }
}
